07/m08a02arrays2-handout/grading/2023-10-30-10-26-17/compile.err
Test07.java:17: error: cannot find symbol
        System.out.println(ArrayUtils.areEqual(arr1, arr2) ? "Yes" : "No");
                                     ^
  symbol:   method areEqual(int[][],int[][])
  location: class ArrayUtils
1 error
